# note-project

./: main.py  pyproject.toml
ai_services/: agent.py  prompt.py  tools.py
core/: config.py  database.py
db/: session.py
models/: note.py
routes/: note_routes.py
schemas/: note_schemas.py
services/: note_service.py
